--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!doctype html>
 <html>
 <head>
-<title>첫번째 공부</title>
+<title>시작</title>
 <meta charset="UTF-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">포트폴리오 사이트</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html">無 1</a></li>
+  <li><a href="2.html">無 2</a></li>
+  <li><a href="3.html">無 3</a></li>
 </ol>
-<h1>HTML</h1>
-<p>Hypertext Markup <a href="http://www.naver.com" target="_blank"
-  title="html5 specification">Language</a> (HTML) is
-the standard markup language for <strong>creating <u>web</u>
-pages</strong> and web applications.Web browsers
-receive HTML documents from a web server or from local storage and render
- them into multimedia web pages. HTML describes the structure of a web
-page semantically and originally included cues for the appearance of the
-document.</p><p style="margin-top:80px;">HTML elements are the building
-blocks of HTML pages. With HTML constructs, images and other objects,
-such as interactive forms, may be embedded into the rendered page.
-It provides a means to create structured</p>
+<h1>공부하기 좋은 사이트</h1>
+<p>
+  <ol>
+  <li><a href="1.html">無 1</a></li>
+  <li><a href="2.html">無 2</a></li>
+  <li><a href="3.html">無 3</a></li>
+</ol>
+</p>
 <img src ="img.jpg" width="80%">
 </body>
 </html>
