--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <h1><a href="index.html">포트폴리오 사이트</a></h1>
 <ol>
   <li><a href="1.html">無</a></li>
-  <li><a href="2.html">無</a></li>
-  <li><a href="3.html">無</a></li>
+  <li><a href="2.html">無無</a></li>
+  <li><a href="3.html">無無無</a></li>
 </ol>
-<h1>주제 無</h1>
+<h1>無</h1>
 <p>
   <ol>
   <li><a href="1.html">無</a></li>
-  <li><a href="2.html">無</a></li>
-  <li><a href="3.html">無</a></li>
+  <li><a href="2.html">無無</a></li>
+  <li><a href="3.html">無無無</a></li>
 </ol>
 </p>
 <img src ="img.jpg" width="80%">
