--- a/3.html
+++ b/3.html
@@ -1,21 +1,24 @@
 <!doctype html>
 <html>
 <head>
-<title>첫번째 공부</title>
+<title>시작</title>
 <meta charset="UTF-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">포트폴리오 사이트</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html">無</a></li>
+  <li><a href="2.html">無無</a></li>
+  <li><a href="3.html">無無無</a></li>
 </ol>
-<h1>JavaScript</h1>
-<p>JavaScriptJavaScriptJavaScript
-JavaScriptJavaScriptJavaScriptJavaScriptJavaScript
-JavaScriptJavaScript</p>
-JavaScriptJavaScriptJavaScriptJavaScript
+<h1>無無無</h1>
+<p>
+  <ol>
+  <li><a href="1.html">無</a></li>
+  <li><a href="2.html">無無</a></li>
+  <li><a href="3.html">無無無</a></li>
+</ol>
+</p>
 <img src ="img.jpg" width="80%">
 </body>
 </html>
